  . Fixed bug #70899 (buildconf failure in extensions). (Bob, Reeze)
  . Fixed bug #61751 (SAPI build problem on AIX: Undefined symbol:
    php_register_internal_extensions). (Lior Kaplan)
  . Fixed \int (or generally every scalar type name with leading backslash)
    to not be accepted as type name. (Bob)
  . Fixed bug #70904 (yield from incorrectly marks valid generator as finished).
    (Bob)

- Mysqlnd:
  . Fixed bug #68077 (LOAD DATA LOCAL INFILE / open_basedir restriction).
    (Laruence)

- OCI8:
  . Fixed LOB implementation size_t/zend_long mismatch reported
    by gcov. (Senthil)

- Phpdbg:
  . Fixed stderr being written to stdout. (Bob)

- Standard:
  . Fixed bug #70960 (ReflectionFunction for array_unique returns wrong number
    of parameters). (Laruence)

- Streams/Socket
  . Add IPV6_V6ONLY constant / make it usable in stream contexts. (Bob)

26 Nov 2015, PHP 7.0.0 RC 8

- Core:
  . Fixed bug #70947 (INI parser segfault with INI_SCANNER_TYPED). (Laruence)
  . Fixed bug #70914 (zend_throw_or_error() format string vulnerability).
    (Taoguang Chen)
  . Fixed bug #70912 (Null ptr dereference instantiating class with invalid
    array property). (Laruence)
  . Fixed bug #70898, #70895 (null ptr deref and segfault with crafted callable).
    (Anatol, Laruence)

- OCI8:
  . Fixed memory leak with LOBs. (Senthil)

- SOAP:
  . Fixed bug #70900 (SoapClient systematic out of memory error). (Dmitry)
  . Fixed bug #70940 (Segfault in soap / type_to_string). (Remi)

- SPL:
  . Fixed bug #70959 (ArrayObject unserialize does not restore protected
    fields). (Laruence)

- Standard:
  . Fixed count on symbol tables. (Laruence)
  . Fixed bug #70963 (Unserialize shows UNKNOWN in result). (Laruence)
  . Fixed bug #70910 (extract() breaks variable references). (Laruence)

12 Nov 2015, PHP 7.0.0 RC 7

- Core:
  . Fixed bug #70249 (Segmentation fault while running PHPUnit tests on
    phpBB 3.2-dev). (Laruence)