@@ -16,6 +16,8 @@ PHP                                                                        NEWS
     to not be accepted as type name. (Bob)
   . Fixed bug #70904 (yield from incorrectly marks valid generator as finished).
     (Bob)
+  . Fixed exception not being thrown immediately into a generator yielding
+    from an array. (Bob)
 
 - Mysqlnd:
   . Fixed bug #68077 (LOAD DATA LOCAL INFILE / open_basedir restriction).
